fix filter panel spacing

--- a/css/homepage/filter.css
+++ b/css/homepage/filter.css
@@ -7,18 +7,18 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
 }
 
 .filter-panel {
     display: flex;
-    position: fixed;
-    padding-bottom: 20%;
+    position: relative;
     flex-direction: column;
     flex-grow: 1;
-    max-height: 500px;
-    overflow-y: scroll;    
+    height: 100%;
+    position: relative;
+    overflow-y: auto;
 
-    /* Allow the filter panel to take up the remaining space */
     background-color: #D9D9D9;
     box-shadow: -2px 0px 8px rgba(0, 0, 0, 0.2);
     z-index: 1000;
@@ -35,39 +35,27 @@
     align-items: center;
     justify-content: start;
     width: 100%;
+    height: 80px;
+}
+
+h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 /* Style for the icon button */
 .icon-button {
     background: none;
-    /* Remove background */
     border: none;
-    /* Remove border */
     padding: 0;
-    /* Remove padding */
     cursor: pointer;
-    /* Pointer cursor */
     outline: none;
-    /* Remove focus outline */
+    margin: 0px;
 }
 
-
- 
-.dietary-preferences h4{
-    margin-top: 1%;
-    margin-bottom: 2%;
-}
-
-.filter-selection h4{
-    margin-bottom: 2%;
-}
-
-.filter-include h4 {
-    margin-bottom: 2%;
-}
-
-.filter-exclude h4 {
-    margin-bottom: 2%;
+h4 {
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 
@@ -97,6 +85,7 @@
     padding: 8px;
     width: 100%;
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 .filter-input:focus {
@@ -106,17 +95,23 @@
 .checkbox-container {
     display: flex;
     align-items: center;
-    margin-top: 16px; /* Space between checkboxes */
-    margin-left: 6px; /* Space between checkboxes */
-    margin-bottom: 8px; /* Space between checkboxes */
+    margin-top: 16px;
+    /* Space between checkboxes */
+    margin-left: 6px;
+    /* Space between checkboxes */
+    margin-bottom: 8px;
+    /* Space between checkboxes */
 }
 
 .filter-checkbox {
-    transform: scale(2); /* Increase the size */
-    margin-right: 20px; /* Space between checkbox and label */
+    transform: scale(2);
+    /* Increase the size */
+    margin-right: 20px;
+    /* Space between checkbox and label */
 }
 
 .checkbox-container label {
     font-size: 18px;
-    color:#003349; /* Label text color */
+    color: #003349;
+    /* Label text color */
 }
